--- a/views/travel_policy.xml
+++ b/views/travel_policy.xml
@@ -223,34 +223,34 @@
         </field>
     </record>
 
-        <act_window id="action_cancel"
-                    multi="True"
-                    key2="client_action_multi" name="Cancel Policy"
-                    res_model="cancel.policy" src_model="policy.travel"
-                    view_mode="form" target="new" />
+<!--        <act_window id="action_cancel"-->
+<!--                    multi="True"-->
+<!--                    key2="client_action_multi" name="Cancel Policy"-->
+<!--                    res_model="cancel.policy" src_model="policy.travel"-->
+<!--                    view_mode="form" target="new" />-->
 
-    <record id="front_view" model="ir.ui.view">
-        <field name="name">Cancel Policy</field>
-        <field name="model">travel.front</field>
-        <field name="arch" type="xml">
-            <form>
+<!--    <record id="front_view" model="ir.ui.view">-->
+<!--        <field name="name">Cancel Policy</field>-->
+<!--        <field name="model">travel.front</field>-->
+<!--        <field name="arch" type="xml">-->
+<!--            <form>-->
 
-                <button string="Confirm" name="create_test" type="object" default_focus="1" class="btn-primary"/>
-                <footer>
-                    <!--                        <button string="Print Authorization" name="print_authorization" type="object" />-->
-                    <button string="Cancel" class="btn-default" special="cancel"/>
-                </footer>
-            </form>
+<!--                <button string="Confirm" name="create_test" type="object" default_focus="1" class="btn-primary"/>-->
+<!--                <footer>-->
+<!--                    &lt;!&ndash;                        <button string="Print Authorization" name="print_authorization" type="object" />&ndash;&gt;-->
+<!--                    <button string="Cancel" class="btn-default" special="cancel"/>-->
+<!--                </footer>-->
+<!--            </form>-->
 
-        </field>
-    </record>
+<!--        </field>-->
+<!--    </record>-->
     <record id="action_cancel" model="ir.actions.act_window">
         <field name="name">Policy Cancel</field>
-        <field name="res_model">travel.front</field>
+        <field name="res_model">cancel.policy</field>
         <field name="view_mode">form</field>
         <!--        <field name="view_id" ref="import_image_view_form"/>-->
         <field name="target">new</field>
-        <field name="binding_model_id" ref="smart_travel_agency.model_policy_travel" />
+        <field name="binding_model_id" ref="smart_travel_agency.model_policy_cancel" />
     </record>
 
     <!--    <act_window id="action_cancel"-->
