--- a/reports/travel_policy_report.xml
+++ b/reports/travel_policy_report.xml
@@ -66,7 +66,7 @@
 
                         </style>
 
-                        <div class="header" style="">
+                        <div class="header" style="float:left; width:100%;">
                             <img class="img img-responsive"  style="width: 100%;" src="https://online.aropeegypt.com.eg:8069/smart_travel_agency/static/src/images/3.png"/>
                             <h4 style="color: #073e89; text-align:center;">Travel Assistance Services (TAS)</h4>
                         </div>
