--- a/reports/travel_policy_report.xml
+++ b/reports/travel_policy_report.xml
@@ -648,7 +648,7 @@
                     <CHARGES>0.0</CHARGES>
                     <Policy_Cost t-esc="o.issue_fees"/>
                     <Tax t-esc="o.policy_approval_fees + o.policy_holder_fees"/>
-                    <Stamps t-esc="o.proportional_stamp + dimensional_stamp"/>
+                    <Stamps t-esc="o.proportional_stamp + o.dimensional_stamp"/>
                     <Fixed_Stamps t-esc="supervisory_stamp"/>
                     <TOTAL_Premium t-esc="o.gross_premium"/>
                     <COVERAREA t-esc="o.geographical_coverage"/>
