--- a/reports/travel_policy_report.xml
+++ b/reports/travel_policy_report.xml
@@ -646,11 +646,11 @@
                     <Cur_Code>01</Cur_Code>
                     <Net_Premium t-esc="o.net_premium"/>
                     <CHARGES>0.0</CHARGES>
-                    <Policy_Cost t-esc="o.issue_fees"/>
-                    <Tax t-esc="o.policy_approval_fees + o.policy_holder_fees"/>
-                    <Stamps t-esc="o.proportional_stamp + o.dimensional_stamp"/>
-                    <Fixed_Stamps t-esc="supervisory_stamp"/>
-                    <TOTAL_Premium t-esc="o.gross_premium"/>
+                    <Policy_Cost t-esc="round(o.issue_fees,2)"/>
+                    <Tax t-esc="round(o.policy_approval_fees + o.policy_holder_fees,2)"/>
+                    <Stamps t-esc="round(o.proportional_stamp + o.dimensional_stamp,2)"/>
+                    <Fixed_Stamps t-esc="round(supervisory_stamp,2)"/>
+                    <TOTAL_Premium t-esc="round(o.gross_premium,2)"/>
                     <COVERAREA t-esc="o.geographical_coverage"/>
                     <COVERTYPE>01</COVERTYPE>
                     <CoverDestination t-field="o.country"/>
