--- a/reports/travel_policy_report.xml
+++ b/reports/travel_policy_report.xml
@@ -649,7 +649,7 @@
                     <Policy_Cost t-esc="round(o.issue_fees,2)"/>
                     <Tax t-esc="round(o.policy_approval_fees + o.policy_holder_fees,2)"/>
                     <Stamps t-esc="round(o.proportional_stamp + o.dimensional_stamp,2)"/>
-                    <Fixed_Stamps t-esc="round(supervisory_stamp,2)"/>
+                    <Fixed_Stamps t-esc="round(o.supervisory_stamp,2)"/>
                     <TOTAL_Premium t-esc="round(o.gross_premium,2)"/>
                     <COVERAREA t-esc="o.geographical_coverage"/>
                     <COVERTYPE>01</COVERTYPE>
