--- a/reports/travel_policy_report.xml
+++ b/reports/travel_policy_report.xml
@@ -280,7 +280,7 @@
                                             <tr style="background-color: #eee;">
                                                 <th scope="col">Name</th>
                                                 <th scope="col">Gender</th>
-                                                <th scope="col">Date Of Birth</th>
+                                                <th scope="col">Date of birth</th>
                                                 <th scope="col">Age</th>
                                                 <th scope="col">Passport</th>
                                                 <!--                                                <th t-if="o.package == 'family'" scope="col">Relationship</th>-->
