--- a/views/travel_policy.xml
+++ b/views/travel_policy.xml
@@ -91,9 +91,10 @@
                             <field name="f_name"   required="1" attrs="{'readonly': [('state', '=','approved')]}"/>
                             <field name="s_name"   required="1" attrs="{'readonly': [('state', '=','approved')]}"/>
                             <field name="l_name"   required="1" attrs="{'readonly': [('state', '=','approved')]}"/>
-
+                            <field name="is_egyption" attrs="{'readonly': [('state', '=','approved')]}"/>
                             <field name="address" attrs="{'readonly': [('state', '=','approved')]}"/>
                             <field name="phone" attrs="{'readonly': [('state', '=','approved')]}"/>
+                            <field name="is_egyption" attrs="{'readonly': [('state', '=','approved')]}"/>
                             <field name="national_id"  required="1" attrs="{'readonly': [('state', '=','approved')]}"/>
                             <field name="passport_num" attrs="{'readonly': [('state', '=','approved')]}" required="1"/>
                         </group>
