--- a/reports/travel_policy_report.xml
+++ b/reports/travel_policy_report.xml
@@ -622,11 +622,13 @@
                     <t t-if="o.source == 'online'">
                         <SourcePIN>2079022</SourcePIN>
                     </t>
-                    <t t-if="o.check_soucre()">
-                        <SourcePIN>2079048</SourcePIN>
-                    </t>
-                    <t t-if="o.check_soucre() == False">
-                        <SourcePIN>2079030</SourcePIN>
+                    <t t-if="o.source != 'online'">
+                        <t t-if="o.check_soucre()">
+                            <SourcePIN>2079048</SourcePIN>
+                        </t>
+                        <t t-if="o.check_soucre() == False">
+                            <SourcePIN>2079030</SourcePIN>
+                        </t>
                     </t>
 
                 </Source>
