--- a/reports/travel_policy_report.xml
+++ b/reports/travel_policy_report.xml
@@ -364,7 +364,7 @@
                                     <ul style="padding-left:15px;font-size: 9px;">
                                         <li>The above is subject to policy terms and conditions as attached.</li>
                                         <li t-if="o.source != 'Agency'">Policy issued online doesn't need insured signature.</li>
-                                        <li style="display:inline-block;" t-if="o.product.product_name != 'TAS'">(*) Excess applies. </li>
+                                        <li style="display:inline-block; display: list-item;list-style-type: disc; list-style-position: inside;" t-if="o.product.product_name != 'TAS'">(*) Excess applies. </li>
                                         <li style="display:inline-block;" t-if="o.product.product_name != 'TAS'">(**) Actual expenses should not exceed the maximum policy limit.</li>
                                         <li t-if="o.product.product_name != 'TAS'">(***) Medical expenses and hospitalization abroad, due to covid – 19 as per attached terms.</li>
                                         <li t-if="o.product.product_name == 'TAS'">(*) Excess applies.</li>
@@ -602,8 +602,8 @@
 
                         </div>
 
-                        <div class="footer" style="float:left; height:300px !important;">
-                            <img t-if="o.source != 'Agency'" style="width:100% !important;" class="img img-responsive" src="https://online.aropeegypt.com.eg:8069/smart_travel_agency/static/src/images/1.png"/>
+                        <div class="footer" style="float:left; height:100px;">
+                            <img t-if="o.source != 'Agency'" style="width:105% !important;" class="img img-responsive" src="https://online.aropeegypt.com.eg:8069/smart_travel_agency/static/src/images/1.png"/>
                             <span style="font-size: 10px !important; white-space: nowrap !important; overflow: hidden !important;">AROPE PROPERTIES &amp; LIABILITIES INSURANCE EGYPT - S.A.E</span>
                         </div>
                     </t>
