--- a/reports/travel_policy_report.xml
+++ b/reports/travel_policy_report.xml
@@ -600,8 +600,9 @@
                                 </div>
                             </div>
                             <div class="footer">
-                                <img t-if="o.source != 'Agency'" style="width:100% !important;" class="img img-responsive" src="https://online.aropeegypt.com.eg:8069/smart_travel_agency/static/src/images/1.png"/>
-                                <span style="font-size: 10px !important; white-space: nowrap !important; overflow: hidden !important;">AROPE PROPERTIES &amp; LIABILITIES INSURANCE EGYPT - S.A.E</span>
+                                <p>dfdfdfdfdf</p>
+<!--                                <img t-if="o.source != 'Agency'" style="width:100% !important;" class="img img-responsive" src="https://online.aropeegypt.com.eg:8069/smart_travel_agency/static/src/images/1.png"/>-->
+<!--                                <span style="font-size: 10px !important; white-space: nowrap !important; overflow: hidden !important;">AROPE PROPERTIES &amp; LIABILITIES INSURANCE EGYPT - S.A.E</span>-->
                             </div>
                         </div>
 
