--- a/views/menu_item.xml
+++ b/views/menu_item.xml
@@ -3,11 +3,11 @@
 
         <menuitem id="travel_policy_view_menu2" name="Travel Policy"
                   web_icon="smart_travel_agency,static/description/travel.jpeg"
-                  groups="smart_travel_agency.branch_group,smart_travel_agency.agency_group,smart_travel_agency.all_agencies_group"
+                  groups="smart_travel_agency.branch_group,smart_travel_agency.agency_group,smart_travel_agency.all_agencies_group,smart_travel_agency.manager"
         />
         <menuitem id="travel_policy_view" name="Travel Policy"
                   parent="travel_policy_view_menu2"
-                  groups="smart_travel_agency.branch_group,smart_travel_agency.agency_group,smart_travel_agency.all_agencies_group"
+                  groups="smart_travel_agency.branch_group,smart_travel_agency.agency_group,smart_travel_agency.all_agencies_group,smart_travel_agency.manager"
         />
 
         <menuitem id="travel_policy_view_menu" name="Travel Policy" parent="travel_policy_view"
@@ -15,19 +15,19 @@
         <menuitem id="travel_policy_agent" name="Travel Issue"
                   action="travel_policy_action_agent" sequence="1" groups="smart_travel_agency.branch_group,smart_travel_agency.head_office_group"/>
         <menuitem id="insured_traveler_view_menu" name="Insured Travelers" parent="travel_policy_view"
-                  action="insured_traveler_action" sequence="1" groups="smart_travel_agency.agency_group,smart_travel_agency.all_agencies_group"/>
+                  action="insured_traveler_action" sequence="1" groups="smart_travel_agency.agency_group,smart_travel_agency.all_agencies_group,smart_travel_agency.manager"/>
         <menuitem id="insured_trips_view_menu" name="Insured Trips" parent="travel_policy_view"
-                  action="insured_trips_action" sequence="2" groups="smart_travel_agency.agency_group,smart_travel_agency.all_agencies_group"/>
+                  action="insured_trips_action" sequence="2" groups="smart_travel_agency.agency_group,smart_travel_agency.all_agencies_group,smart_travel_agency.manager"/>
         <menuitem id="billing_view_menu" name="Billing" parent="travel_policy_view"
-                  action="billing_action" sequence="3" groups="smart_travel_agency.agency_group,smart_travel_agency.all_agencies_group"/>
+                  action="billing_action" sequence="3" groups="smart_travel_agency.agency_group,smart_travel_agency.all_agencies_group,smart_travel_agency.manager"/>
         <menuitem id="comm_view_menu" name="Agent Commission" parent="travel_policy_view"
-                  action="comm_action" sequence="4" groups="smart_travel_agency.agency_group,smart_travel_agency.all_agencies_group"/>
+                  action="comm_action" sequence="4" groups="smart_travel_agency.agency_group,smart_travel_agency.all_agencies_group,smart_travel_agency.manager"/>
         <!--        <menuitem id="settle_view_menu" name="Settlements" parent="travel_policy_view"-->
         <!--                  action="agency_settle_action" sequence="5" groups="smart_travel_agency.agency_group"/>-->
 
 
         <menuitem id="configuration_view_menu2" name="Configuration"
-                  groups="smart_travel_agency.all_agencies_group"
+                  groups="smart_travel_agency.all_agencies_group,smart_travel_agency.manager"
                   web_icon="smart_travel_agency,static/description/conf.png" parent="travel_policy_view_menu2" />
 
         <menuitem id="benefits_menu" name="Benefits" parent="configuration_view_menu2"
