--- a/views/rating_table.xml
+++ b/views/rating_table.xml
@@ -72,8 +72,10 @@
         <field name="arch" type="xml">
             <form string="Travel Agency">
                 <header>
+                    <field name="state" widget="statusbar"/>
                     <button name="create_agency_user" string="Create Agency Manger" type="object"
-                            class="oe_highlight" attrs="{'invisible': [('user', '=', True)]}" />
+                            class="oe_highlight" attrs="{'invisible': ['|',('user', '=', True),('state', '!=', 'approved')]}" />
+                    <button name="approve_agency" string="Approve Agency" type="object" class="oe_highlight" attrs="{'invisible': [('state', '=', 'approved')]}" groups="smart_travel_agency.manager"/>
                 </header>
                 <sheet>
                     <div class="oe_button_box" name="button_box">
@@ -127,7 +129,7 @@
                         </group>
                     </group>
 
-                    <notebook>
+                    <notebook attrs="{'invisible': [('state', '=', 'approved')]}">
                         <page string="Agency Branches">
                             <field name="branch_ids">
                                 <tree editable="bottom">
