--- a/reports/travel_policy_report.xml
+++ b/reports/travel_policy_report.xml
@@ -606,7 +606,7 @@
 
                         </div>
 
-                        <div class="footer" style="width:100px;">
+                        <div class="footer">
                             <img style="width:100% !important; float:right;" class="img img-responsive" src="https://online.aropeegypt.com.eg:8069/smart_travel_agency/static/src/images/1.png"/>
                             <span style="float:left;font-size: 10px !important; white-space: nowrap !important; overflow: hidden !important;">AROPE PROPERTIES &amp; LIABILITIES INSURANCE EGYPT - S.A.E</span>
                         </div>
