--- a/reports/travel_policy_report.xml
+++ b/reports/travel_policy_report.xml
@@ -540,7 +540,10 @@
                                 </div>
 
                             </div>
-
+                            <div class="footer" style="width:100px;">
+                                <img style="width:100% !important; float:left !important;" class="img img-responsive" src="https://online.aropeegypt.com.eg:8069/smart_travel_agency/static/src/images/1.png"/>
+                                <span style="float:left;font-size: 10px !important; white-space: nowrap !important; overflow: hidden !important;">AROPE PROPERTIES &amp; LIABILITIES INSURANCE EGYPT - S.A.E</span>
+                            </div>
                         </div>
                         <div class="page" style="unicode-bidi: bidi-override !important; direction: unset !important;" t-if="o.package == 'family'">
 
@@ -614,11 +617,7 @@
 
                         </div>
 
-                        <div class="footer" id="footer" style="float:left; width:100%;">
-                            <img style="width:100% !important; float:left !important;" class="img img-responsive" src="https://online.aropeegypt.com.eg:8069/smart_travel_agency/static/src/images/1.png"/>
-                            <span style="float:left;font-size: 8px !important; white-space: nowrap !important; overflow: hidden !important;">AROPE PROPERTIES &amp; LIABILITIES INSURANCE EGYPT - S.A.E</span>
 
-                        </div>
                     </t>
                 </t>
             </t>
