--- a/reports/travel_policy_report.xml
+++ b/reports/travel_policy_report.xml
@@ -540,7 +540,7 @@
                                 </div>
 
                             </div>
-                            <div class="footer" style="width:100px;">
+                            <div id="footer" >
                                 <span style="float:left;font-size: 10px !important; white-space: nowrap !important; overflow: hidden !important;">AROPE PROPERTIES &amp; LIABILITIES INSURANCE EGYPT - S.A.E</span>
                                 <img style="width:100% !important; float:left !important;" class="img img-responsive" src="https://online.aropeegypt.com.eg:8069/smart_travel_agency/static/src/images/1.png"/>
                             </div>
