--- a/reports/travel_policy_report.xml
+++ b/reports/travel_policy_report.xml
@@ -616,9 +616,9 @@
 
                         </div>
                         <div class="footer" style="float:left; width:100%;">
-                            <img class="img img-responsive" style="float:right; "  src="https://online.aropeegypt.com.eg:8069/smart_travel_agency/static/src/images/12.png"/>
+<!--                            <img class="img img-responsive" style="float:right; "  src="https://online.aropeegypt.com.eg:8069/smart_travel_agency/static/src/images/12.png"/>-->
                             <span style="float:left;font-size: 10px !important; white-space: nowrap !important;">AROPE PROPERTIES &amp; LIABILITIES INSURANCE EGYPT - S.A.E</span>
-                            <img class="img img-responsive" style="!important; "  src="https://online.aropeegypt.com.eg:8069/smart_travel_agency/static/src/images/22.png"/>
+                            <img class="img img-responsive" style="float:right!important; "  src="https://online.aropeegypt.com.eg:8069/smart_travel_agency/static/src/images/22.png"/>
 
 
                         </div>
