--- a/reports/travel_policy_report.xml
+++ b/reports/travel_policy_report.xml
@@ -616,7 +616,7 @@
 
                         </div>
                         <div class="footer" style="float:left; width:100%;">
-                            <img class="img img-responsive" style="float:right; width:100%;"  src="https://online.aropeegypt.com.eg:8069/smart_travel_agency/static/src/images/16.png"/>
+                            <img class="img img-responsive" style="float:right; width:100px !important; height: 100px !important;"  src="https://online.aropeegypt.com.eg:8069/smart_travel_agency/static/src/images/15.png"/>
                             <span style="float:left;font-size: 10px !important; white-space: nowrap !important;">AROPE PROPERTIES &amp; LIABILITIES INSURANCE EGYPT - S.A.E</span>
 <!--                            <img  style="float:right!important;" class="img img-responsive"  src="https://online.aropeegypt.com.eg:8069/smart_travel_agency/static/src/images/22.png"/>-->
 
