--- a/views/priceTable.xml
+++ b/views/priceTable.xml
@@ -26,13 +26,13 @@
                                     <field name="period"/>
                                     <field name="dispaly_period"/>
                                     <field name="net_premium"/>
-                                    <field name="proportional_stamp"/>
+                                    <field name="proportional_stamp" readonly="1" force_save="1"/>
                                     <field name="dimensional_stamp"/>
-                                    <field name="supervisory_stamp"/>
-                                    <field name="policy_approval_fees"/>
-                                    <field name="policy_holder_fees"/>
+                                    <field name="supervisory_stamp" readonly="1" force_save="1"/>
+                                    <field name="policy_approval_fees" readonly="1" force_save="1"/>
+                                    <field name="policy_holder_fees" readonly="1" force_save="1"/>
                                     <field name="issue_fees"/>
-                                    <field name="gross_premium"/>
+                                    <field name="gross_premium" readonly="1" force_save="1"/>
 
                                 </tree>
                             </field>
